Finished ajax on question builder by fixing suggestions.

--- a/app/views/layouts/_scripts.html.erb
+++ b/app/views/layouts/_scripts.html.erb
@@ -6,4 +6,7 @@
 <script type="text/javascript" src="/javascripts/markitup/markitup.init.js"></script>
 <script type="text/javascript" src="/javascripts/markitup/set.js"></script>
 <script type="text/javascript" src="/javascripts/bootstrap-modal.js"></script>
+<script type="text/javascript" src="/javascripts/questions.js"></script>
+<script type="text/javascript" src="/javascripts/suggestions.js"></script>
+<script type="text/javascript" src="/javascripts/editor.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
