--- a/app/views/tasks/_edit_task_form.html.erb
+++ b/app/views/tasks/_edit_task_form.html.erb
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="span8 suggestions" style="padding-top:10px;">
+			<div class="span8 suggestions" style="padding-top:10px; margin-left:150px;">
 				<p class="not_found_message" style="display: none;">No suggestions found.</p>
 				<p class="did_you_mean" style="display: none;">Did you mean...?</p>
 				<p class="found_message" style="display: none;">Suggestions (doubleclick):</p>
