--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 <body>
 <div id="fb-root"></div>
 <script>
+var std_url = '<%= root_url %>';
 $(function(){
 	$('.locked_challenge').removeAttr("href");
 	$('.locked_challenge').click(function(){
@@ -26,6 +27,15 @@ $(function(){
 		});
 	});
 });
+
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=276612745757646";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+$.fn.exists = function(){return this.length>0;}
 </script>
 <div id="locked_modal" class="modal hide fade">
   <div class="modal-header">
@@ -39,17 +49,6 @@ $(function(){
 		<%= link_to "Okay", "#", :class => "btn primary", :onclick => "$('#locked_modal').modal('hide');" %>
 	</div>
 </div>
-<script>
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=276612745757646";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
-
-$.fn.exists = function(){return this.length>0;}
-</script>
 <div class="container">
 	<%= render "layouts/header" %>
 	<section id="content">
