--- a/app/views/sections/edit_tasks.html.erb
+++ b/app/views/sections/edit_tasks.html.erb
@@ -1,27 +1,15 @@
 <script>
-$(function($) {
-    $('#new_task').on('ajax:success', function(event, data, status, xhr) {
-      if(data.errors){
-				$("#task_form").prepend("<div class='alert-message error'>"+data.errors[0]+"</div>");
-			} else {
-				$("#task_form").prepend("<div class='alert-message success'>Task added successfully.</div>");
-				clear_form();
-				var $new_question = $("<tr class='task'><td>"+data+"</td></tr>").prependTo("#task_list");
-				$(".task:first").show();
-        $(".alert-message").fadeOut(5000);
-        var question_count = $("#question_counter").text(parseInt($("#question_counter").text())+1);
-        bind_delete_task($new_question.find(".delete_button"));
-				bind_edit_task($new_question.find(".edit_button"));
-			}
-    });
-});
-
 $(function(){
+	$('#new_task').submit(block_form_submit);
+	$('#new_task').on('ajax:success', add_new_task);
   $('.delete_button').each(function(){
     bind_delete_task(this);
   });
   $('.edit_button').each(function(){
     bind_edit_task(this);
+		$(this).click(function(){
+			$(this).attr("disabled","disabled");
+		});
   });
 	$(".correct_answer").change(function(){
 		bind_answer_suggestion(this);
