Starting work on ajax challenge transitions

--- a/app/views/layouts/_scripts.html.erb
+++ b/app/views/layouts/_scripts.html.erb
@@ -9,4 +9,5 @@
 <script type="text/javascript" src="/javascripts/questions.js"></script>
 <script type="text/javascript" src="/javascripts/suggestions.js"></script>
 <script type="text/javascript" src="/javascripts/editor.js"></script>
+<script type="text/javascript" src="/javascripts/challenge.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
