--- a/app/views/sections/_continue.html.erb
+++ b/app/views/sections/_continue.html.erb
@@ -1,10 +1,18 @@
-<% if correct %>
+<%= render "sections/modals/start_modal" %>
+<% if correct == true %>
 	<%= render "sections/modals/correct_modal" %>
 <% end %>
+
 <% if jumpstart %>
 	<%= render "sections/modals/jumpstart", { :path => path, :leaderboards => leaderboards } %>
+	<script>
+		$(function(){
+			$('#username_modal').modal({ keyboard: true, backdrop: 'static', show: true });
+			bind_change_name_form();
+		});
+	</script>
 <% elsif earned_points == 0 && correct.nil? %>
-	<%= render "sections/modals/countdown_modal" %>
+	<script>$(function(){ show_start_modal(); });</script>
 <% end %>
 
 <%= form_tag({ :controller => :sections, :action => "continue" }, :remote => true, :method => "get", "data-type" => "html", :id => "challenge_form") %>
