--- a/app/views/tasks/_new_task_form.html.erb
+++ b/app/views/tasks/_new_task_form.html.erb
@@ -1,14 +1,11 @@
 <%= form_for(task, :remote => true, "data-type" => "html") do |f| %>
-<div style="margin-bottom:20px;">
-  <span class="label" style="font-size: 13px; vertical-align:middle;"><span id="question_counter"><%= @tasks.size %></span> questions</span>
-  <div style="float: right;">
-    <span id="new_question_button" class="btn primary" onclick="$('#task_form,#close_question_button,#save_question_button').show();$('#new_question_button').hide();">New Question</span>
-    <%= f.submit "Save", :id => "save_question_button", :class => "btn primary", :style => "display:none;" %>
-    <span id="close_question_button" class="btn secondary" style="display:none;" onclick="$('#task_form,#close_question_button,#save_question_button').hide();$('#new_question_button').show();$('.alert-message').remove();">Close</span>
-  </div>
+<div style="float:right;">
+  <%= f.submit "Save", :id => "save_question_button", :class => "btn primary" %>
+  <span id="close_question_button" class="btn secondary" onclick="clear_form();">Clear</span>
 </div>
-<div id="task_form" <% unless display == true %>style="display:none;"<% end %>>
-  <h3 style="margin-left:70px;" id="form_title">Add Question</h3>
+<div id="task_form" style="margin-top:10px;">
+  <h3 style="margin-left:10px;" id="form_title">Add Question</h3>
+  <div class="message_container alert-message" style="display: none; width:350px; margin-left: 70px; margin-top:10px;"></div>
   <%= f.hidden_field :section_id, :value => @section.id %><br/>
   <div class="field clearfix">
     <%= f.label :question %>
@@ -28,7 +25,7 @@
       </div>
       <% end %>
     </div>
-    <div class="span8 suggestions" style="padding-top:10px;">
+    <div class="span8 suggestions" style="padding-top:10px; margin-left:150px;">
       <p class="not_found_message" style="display: none;">No suggestions found.</p>
       <p class="did_you_mean" style="display: none;">Did you mean...?</p>
       <p class="found_message" style="display: none;">Suggestions (doubleclick):</p>
