Finished with ajax-path-editor prototype.

--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -1,73 +1,88 @@
-<%= render "settings_modal", { :path => @path, :categories => @categories } %>
+<style>
+  ul.pills {  }
+  .pills a:hover { background-color: darkgray; }
+  table td { border-top: 5px solid #DDD; }
+  table tr { padding: 50px; }
+  table p { font-size: 15px; }
+  .editable { padding: 8px; }
+  .section_editable { padding: 3px; }
+  .editable:hover, .section_editable:hover { background-color: lightgray; cursor: pointer }
+  h5 { font-weight: bold; }
+</style>
 <script>
 $(function(){
-  $('.edit_section_questions_pill').each(function(){
-    $(this).on('ajax:success', function(event, data){
-      console.log("bind_edit_section_questions success");
-      var $row = $(this).parents("td:first");
-      $row.find(".edit_section_overview_pill").parent().removeClass("active");
-      $row.find(".edit_section_settings_pill").parent().removeClass("active");
-      $row.find(".edit_section_questions_pill").parent().addClass("active");
-      $row.find(".section_container").html(data).show();
-    });
+  $(".edit_path_settings_button, .editable").each(function(){
+    $(this).click(function(){$('#settings_modal').modal({show: true, keyboard: true, static: true});});
   });
-  $('.edit_section_settings_pill').each(function(){
-    $(this).on('ajax:success', function(event, data){
-      console.log("bind_edit_section_settings succcess");
-      var $row = $(this).parents("td:first");
-      $row.find(".edit_section_overview_pill").parent().removeClass("active");
-      $row.find(".edit_section_settings_pill").parent().addClass("active");
-      $row.find(".edit_section_questions_pill").parent().removeClass("active");
-      $row.find(".section_container").html(data).show();
-    });
+  $('.edit_caption_container').each(function(){
+    $(this).hover(function(){ $(this).find("div").show(); }, function(){ $(this).find("div").hide(); });
   });
 });
 </script>
+<%= render "settings_modal", { :path => @path, :categories => @categories } %>
+<% @sections.each do |s| %>
+  <%= render "section_settings_modal", { :section => s } %>
+<% end %> 
 <div class="row" style="margin-bottom:20px;">
-  <div class="span2">
-    <%= image_tag(@path.path_pic, :style=> "width:90px;") %>
+  <div style="float:right; display:inline;">
+    <%= link_to "Publish", publish_path_path(@path), :confirm => "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes.", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+    <span class="btn secondary edit_path_settings_button" style="margin:10px 0 0 10px;">Settings</span>
   </div>
-  <div style="float:right;">
-    <%= link_to "Publish", publish_path_path(@path), :confirm => "You sure homes?", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
-    <span class="btn secondary edit_path_settings_button" style="margin:10px;" onclick="$('#settings_modal').modal({show: true, keyboard: true, static: true});">Settings</span>
+  <div class="span3">
+    <ul class="media-grid">
+      <li>
+        <a class="edit_caption_container edit_path_settings_button" style="cursor: pointer;" title="Click to edit">
+          <div class="path-caption" style="opacity: .75; width: 155px; height: inherit; margin-top: 90px; display: none;">
+            <span class="caption-title" style="font-size:20px; line-height:24px;">Edit</span>
+          </div>
+          <%= image_tag(@path.path_pic, :style=> "width:160px; min-height: 120px;", :class => "thumbnail") %>
+        </a>
+      </li>
+    </ul>
   </div>
-  <div style="padding:5px;">
-    <h1><%= @path.name %></h1>
-    <p><%= @path.description.empty? ? "Click here." : @path.description %></p>
+  <div class="span8">
+    <h1 style="margin-bottom:5px;" class="editable" title="Click to edit"><%= @path.name %></h1>
+    <p class="editable" style="font-size:15px;" title="Click to edit"><%= @path.description.empty? ? "Click here." : @path.description %></p>
   </div>
 </div>
 <section class="tab_content">
-  <h2>Sections</h2>
-  <% if @sections.empty? %>
-    <p style="padding:25px;"><%= name_for_paths.pluralize %> are broken down into individual sections. Get started by creating your <%= link_to "first section!", new_section_path(:path_id => @path.id) %></p>
-  <% else %>
-    <table>
-    <% @sections.each do |s| %>
-      <tr>
-        <td>
+   <%= link_to "New Section", new_section_path(:path_id => @path.id), :class=>"btn secondary", :style => "float:right; display:inline;" %>
+  <h2 style="font-size: 20px; color: darkgray;">SECTIONS</h2>
+  <table>
+  <% counter = 1 %>
+  <% @sections.each do |s| %>
+    <tr>
+      <td class="section">
+        <section style="min-height: 290px;">
           <div class="row">
             <div style="float:right;">
               <ul class="pills">
                 <li class="active"><a class="edit_section_overview_pill" onclick="close_section_container(this);">Overview</a></li>
                 <li><%= link_to "Questions", edit_section_path(s, :m => "tasks"), :remote => true, "data-type" => "html", :class => "edit_section_questions_pill" %></li>
-                <li><%= link_to "Settings", edit_section_path(s, :m => "settings"), :remote => true, "data-type" => "html", :class => "edit_section_settings_pill" %></li>
+                <li><%= link_to "Content", edit_section_path(s, :m => "content"), :remote => true, "data-type" => "html", :class => "edit_section_content_pill" %></li>
               </ul>
             </div>
-            <div class="span2">
-              <%= image_tag(s.pic, :size => "60x60") %>
-            </div>
             <div class="span14">
-              <h3 style="display:inline;"><%= link_to s.name, edit_section_path(s, :m => "instructions") %></h3>
+              <% if s.has_custom_image? %>
               <div>
-                <span class="label" style="font-size: 13px; vertical-align:middle;"><span id="question_counter"><%= s.tasks.size %></span> questions</span>
+                <%= image_tag(s.pic, :size => "70x70", :style => "float:left; margin-right: 10px;") %>
               </div>
+              <% end %>
+              <h2 class="section_editable" onclick="$('#section_settings_modal_<%= s.id %>').modal({show:true});"><%= counter.to_s+". "+s.name %></h2>
+              <div>
+                <span class="label" style="font-size: 12px; vertical-align:middle;"><span id="question_counter"><%= s.tasks.size %></span> questions</span>
+                <% unless s.is_published %>
+                  <span class="label warning" style="font-size: 12px; vertical-align:middle; background-color: #0069D6;">draft</span>
+                <% end %>
+              </div>
+              <%= render "sections/overview", { :s => s } %>
             </div>
           </div>
           <div class="section_container row" style="margin: 10px 0px 0px 0px;"></div>
-        </td>
-      </tr>
-    <% end %>
-    </table>
+        </section>
+      </td>
+    </tr>
+    <% counter += 1 %>
   <% end %>
-  <%= link_to "New Section", new_section_path(:path_id => @path.id), :class=>"btn primary" %>
+  </table>
 </section>
