--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -32,7 +32,7 @@
   </div>
   <div class="span8">
     <h1 style="margin-bottom:5px;" class="editable" title="Click to edit"><%= @path.name %></h1>
-    <p class="editable" style="font-size:15px;" title="Click to edit"><%= @path.description.empty? ? "Click here." : @path.description %></p>
+    <p class="editable" style="font-size:15px;" title="Click to edit"><%= @path.description.empty? ? "Click here to add a description." : @path.description %></p>
   </div>
 </div>
 <section class="tab_content">
