Minor finishing UI touches.

--- a/app/views/paths/edit.html.erb
+++ b/app/views/paths/edit.html.erb
@@ -15,7 +15,11 @@
 <% end %> 
 <div class="row" style="margin-bottom:20px;">
   <div style="float:right; display:inline;">
-    <%= link_to "Publish", publish_path_path(@path), :confirm => "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes.", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+    <% if @path.is_published %>
+      <%= link_to "View", @path, :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+    <% else %>
+      <%= link_to "Publish", publish_path_path(@path), :confirm => "Are you certain that you want to publish this just yet? Once its been published, it cannot be unpublished, though you can always make changes.", :class => "btn primary", :style => "margin:10px 0 10px 10px;" %>
+    <% end %>
     <span class="btn secondary edit_path_settings_button" style="margin:10px 0 0 10px;">Settings</span>
   </div>
   <div class="span3">
