Added default actions for publishing regarding sections and user roles.

--- a/app/views/paths/new.html.erb
+++ b/app/views/paths/new.html.erb
@@ -4,7 +4,7 @@
   <div class="field clearfix">
     <label><%= name_for_paths %> name</label>
     <div class="input">
-      <%= f.text_field :name %>
+      <%= f.text_field :name, :autofocus => "autofocus" %>
     </div>
   </div>
   <div class="field clearfix">
