Completion page changes.

--- a/app/views/leaderboards/_leaderboard.html.erb
+++ b/app/views/leaderboards/_leaderboard.html.erb
@@ -1,6 +1,6 @@
 <%
   table_class = table_class || nil 
-  display = display || "display: none;" 
+  display = "display: table;" || "display: none;" 
   leaderboard_id = leaderboard_id.to_s || nil
   disable_filler = disable_filler ||  false
   limit = limit || 10
