--- a/app/views/paths/popups/_jumpstart_registration.html.erb
+++ b/app/views/paths/popups/_jumpstart_registration.html.erb
@@ -52,6 +52,7 @@ $(function(){
   </div>
   <div class="modal-footer">
   <%= f.submit "Save Score", :class => "btn primary" %>
+  <span class="btn seconday" onclick="$('#startmodal').modal('hide');">Back</span>
   </div>
   <% end %>
 </div>
