--- a/app/views/paths/completion.html.erb
+++ b/app/views/paths/completion.html.erb
@@ -14,16 +14,46 @@ $(function(){
 </script>
 <%= render "paths/popups/jumpstart_registration", { :user => current_user, :path => @path } %>
 <% end %>
-<section class="completion row">
-  <div class="span4">
-    <%= image_tag @path.path_pic, :size => "200x200" %>
+<section class="row">
+  <div class="span5">
+    <ul class="media-grid">
+      <li>
+        <a>
+          <%= image_tag @path.path_pic, :style => "min-height: 275px; max-height: 350px; max-width: 275px;" %>
+        </a>
+      </li>
+    </ul>
   </div>
-  <div class="span12" style="margin-top: 15px;">
-    <h1>Congratulations!</h1>
+  <div class="span11" style="margin: 0 0 0 20px; ">
+    <h1 style="margin-bottom:8px;">Congratulations!</h1>
     <div>
-      <p style="font-size:16px; font-weight: bold; margin-bottom: 25px; line-height:25px;">You have successfully completed this <%= name_for_paths.downcase %>. You're now ranked <%= @user_rank %> with <%= @total_points_earned.to_i %> points. <% if @next_rank_points.to_i > 0 %>You only need <%= @next_rank_points.to_i %> points to move up to the next rank!<% end %></p>
+      <p style="font-size:14px; font-weight: ; margin-bottom: 5px; line-height:19px;">You have successfully completed this <%= name_for_paths.downcase %>. You're now ranked <%= @user_rank %> with <%= @total_points_earned.to_i %> points. <% if @next_rank_points.to_i > 0 %>You only need <%= @next_rank_points.to_i %> points to move up to the next rank!<% end %></p>
       <% if @must_register %>
-        <%= link_to "Save Score", "#", :id => "save_score", :class => "btn primary large" %>
+      <p style="font-size:15px; font-weight: bold; margin-bottom: 15px; line-height:19px;">Create an account below so you can <span style="text-decoration:underline">improve your ranking</span>, <span style="text-decoration:underline">start a public profile</span> and <span style="text-decoration:underline">unlock more challenges!</span></p>
+      <div style="width: 260px; padding: 13px; border: 0px solid lightgray; border-radius: 5px; float:left;">
+        <%= form_for(current_user, :html => {:id => "change_credentials_form", :style => "margin-bottom:0px;"}) do |f| %>
+        <%= f.hidden_field :path_id, :value => @path.id %>
+        <div class="clearfix" style="margin-bottom:8px;">
+          <label style="font-size: 14px; width: 60px;">Email</label>
+          <div class="input" style="margin-left: 70px;">
+            <%= f.text_field :email, :value => "", :style => "width:175px; margin-right: 15px;" %>
+          </div>
+        </div>
+        <div class="clearfix" style="margin-bottom:8px;">
+          <label style="font-size: 14px; width: 60px;">Password</label>
+          <div class="input" style="margin-left: 70px;" >
+            <%= f.password_field :password, :value => "", :style => "width:175px; margin-right: 15px;" %>
+          </div>
+        </div>
+        <div class="clearfix" style="margin-bottom:0px;">
+          <label style="font-size: 14px; width: 60px;">Confirm Password</label>
+          <div class="input" style="margin-left: 70px;" >
+            <%= f.password_field :password_confirmation, :value => "", :style => "width:175px; margin-right: 15px;" %>
+          </div>
+        </div>
+        <%= f.submit "Save Score", :class => "btn primary", :style => "margin-left: 120px;" %>
+        <% end %>
+      </div>
       <% else %>
         <% if @enable_comments %>
           <a href="http://www.linkedin.com/shareArticle?mini=true&url=<%=u hero_path_url(@path.id, :hero => current_user.id) %>&title=Moonlite Achievement Unlocked!&summary=<%= current_user.name %> is now a certified expert in <%= @path.name %>. Can you beat their score?&source=<%= hero_path_path(@path.id, :hero => current_user.id)%>" target="_blank"><img src="/images/linkedin-connect.gif" width="150" height="45"></a>
@@ -34,14 +64,15 @@ $(function(){
     </div>
   </div>
 </section>
-<section style="padding: 30px 20px 0px 20px;">
+<section>
 <%= render "leaderboards/leaderboard", 
   { :leaderboard_entries => @leaderboards[1], 
     :leaderboard_id => "Overall", 
     :display => true, 
     :disable_filler => true, 
     :highlight => current_user.id,
-    :limit => 5
+    :limit => 5,
+    :table_class => "bordered-table"
 } %>
 </section>
 <% if @enable_recommendations %>
